<resources>
    <string name="app_name">ShrinkPic</string>
    <string name="load_from_gallery">Load From Gallery</string>
    <string name="load_from_camera">Load From Camera</string>
    <string name="compress">Compress</string>
    <string name="original_image">Original Image</string>
    <string name="compress_image">Compressed Image</string>
    <string name="croppedimage">CroppedImage</string>
    <string name="pick_image">Pick Image</string>
    <string name="save">Save</string>
    <string name="image_cropping">Image Cropping</string>
    <string name="compressbutton">CompressButton</string>
    <string name="cropbutton">CropButton</string>
    <string name="ibutton">iButton</string>
    <string name="size">Size:</string>
    <string name="choose_image_quality">Choose Image Quality</string>
    <string name="camerabutton">CameraButton</string>
    <string name="gallerybutton">GalleryButton</string>
    <string name="splashscreen">SplashScreen</string>
    <string name="location_cropped_image"><![CDATA[For Cropped Image : Phone Storage -> Pictures -> Cropped Image]]></string>
    <string name="location_compressed_image"><![CDATA[For Compressed Image : Phone Storage -> Pictures -> Compressed Image]]></string>
    <string name="WhereToFind">Compressed and cropped images can be found inside Picture folder of your phone storage directory.</string>
    <string-array name="imgquality">
        <item>2401</item>
        <item>1920</item>
        <item>1080</item>
        <item>720</item>
        <item>640</item>
        <item>480</item>
    </string-array>

</resources>